# std-capturer

./: .gitignore  CMakeLists.txt  README.md  StdCapture.cpp  StdCapture.h
test/: CMakeLists.txt  main.cpp
